--- a/src/HAX506X_Probabilites/tds/td_main.tex
+++ b/src/HAX506X_Probabilites/tds/td_main.tex
@@ -5,14 +5,34 @@
 \input{../assets/module_header.tex}
 \usepackage[a4paper,hmargin=30mm,vmargin=30mm]{geometry}
 
-\title{\color{astral} \sffamily \bfseries Probabilités --- TDs}
+\title{\color{astral} \sffamily \bfseries Théorie des probabilités --- TDs}
 \author{Ivan Lejeune}
 \date{\today}
 
+\toggletrue{showsolutions}
+
 \begin{document}
+    \maketitle
+    \tableofcontents
 
-\input{td_01.tex}
-% \input{td_02.tex}
-% Add more TDs as needed
+    \section*{TD1 --- Espaces probabilisés}\label{sec:TD1}
+    \addcontentsline{toc}{section}{\nameref{sec:TD1}}
+    \setcounter{section}{1}
+    \setcounter{tdcounter}{0}
+    \input{../tds/td_1.tex}
+    \newpage
 
+    %\section*{TD2}\label{sec:TD2}
+    %\addcontentsline{toc}{section}{\nameref{sec:TD2}}
+    %\setcounter{section}{2}
+    %\setcounter{tdcounter}{0}
+    %\input{../tds/td_2.tex}
+    %\newpage
+%
+    %\section*{TD3}\label{sec:TD3}
+    %\addcontentsline{toc}{section}{\nameref{sec:TD3}}
+    %\setcounter{section}{3}
+    %\setcounter{tdcounter}{0}
+    %\input{../tds/td_3.tex}
+    %\newpage
 \end{document}
