--- a/src/HAX501X_Groupes-et-Anneaux-I/tds/td_1.tex
+++ b/src/HAX501X_Groupes-et-Anneaux-I/tds/td_1.tex
@@ -1,4 +1,4 @@
-\subsection*{Rappels d'arithmétique des entiers}\label{sec:tutorial_1}
+\subsection*{Exercices en TD}\label{sec:tutorial_1}
 \addcontentsline{toc}{subsection}{\nameref{sec:tutorial_1}}
 
 
