--- a/src/HAX501X_Groupes-et-Anneaux-I/tds/td_2.tex
+++ b/src/HAX501X_Groupes-et-Anneaux-I/tds/td_2.tex
@@ -1,4 +1,4 @@
-\subsection*{Etude de \(\Z/n\Z\)}\label{sec:tutorial_2}
+\subsection*{Exercices en TD}\label{sec:tutorial_2}
 \addcontentsline{toc}{subsection}{\nameref{sec:tutorial_2}}
 
 \begin{td-exo}[En cercle] % 1
