--- a/src/HAX501X_Groupes-et-Anneaux-I/tds/td_3.tex
+++ b/src/HAX501X_Groupes-et-Anneaux-I/tds/td_3.tex
@@ -1,4 +1,4 @@
-\subsection*{Introduction à la théorie des groupes}\label{sec:tutorial_3}
+\subsection*{Exercices en TD}\label{sec:tutorial_3}
 \addcontentsline{toc}{subsection}{\nameref{sec:tutorial_3}}
 
 \begin{td-exo}[Groupes] % 1
