--- a/src/HAX501X_Groupes-et-Anneaux-I/tds/td_main.tex
+++ b/src/HAX501X_Groupes-et-Anneaux-I/tds/td_main.tex
@@ -15,21 +15,21 @@
     \maketitle
     \tableofcontents
 
-    \section*{TD1}\label{sec:TD1}
+    \section*{TD1 --- Rappels d'arithmétique des entiers}\label{sec:TD1}
     \addcontentsline{toc}{section}{\nameref{sec:TD1}}
     \setcounter{section}{1}
     \setcounter{tdcounter}{0}
     \input{../tds/td_1.tex}
     \newpage
 
-    \section*{TD2}\label{sec:TD2}
+    \section*{TD2 --- Etude de \(\Z/n\Z\)}\label{sec:TD2}
     \addcontentsline{toc}{section}{\nameref{sec:TD2}}
     \setcounter{section}{2}
     \setcounter{tdcounter}{0}
     \input{../tds/td_2.tex}
     \newpage
 
-    \section*{TD3}\label{sec:TD3}
+    \section*{TD3 --- Introduction à la théorie des groupes}\label{sec:TD3}
     \addcontentsline{toc}{section}{\nameref{sec:TD3}}
     \setcounter{section}{3}
     \setcounter{tdcounter}{0}
