--- a/src/HAX506X_Probabilites/tds/td_main.tex
+++ b/src/HAX506X_Probabilites/tds/td_main.tex
@@ -22,12 +22,12 @@
     \input{../tds/td_1.tex}
     \newpage
 
-    %\section*{TD2}\label{sec:TD2}
-    %\addcontentsline{toc}{section}{\nameref{sec:TD2}}
-    %\setcounter{section}{2}
-    %\setcounter{tdcounter}{0}
-    %\input{../tds/td_2.tex}
-    %\newpage
+    \section*{TD2 --- Variables aléatoires}\label{sec:TD2}
+    \addcontentsline{toc}{section}{\nameref{sec:TD2}}
+    \setcounter{section}{2}
+    \setcounter{tdcounter}{0}
+    \input{../tds/td_2.tex}
+    \newpage
 %
     %\section*{TD3}\label{sec:TD3}
     %\addcontentsline{toc}{section}{\nameref{sec:TD3}}
